@startuml
'skinparam monochrome true
'skinparam shadowing false

title UC014 - Register employee

class Administrator {
    +Username: String [PK]
    +Password: String
}

class SNS {
    +Name: String [PK]
}

class Employee {
    +Name: String
    +JobDescription: String
    +SNSNumber: String [PK]

}

' Relationships
Administrator "1" -- "1" Employee : registers >
Employee "1" -- "1" SNS : is part >



@enduml
